syntax = "proto3";

package kvs;

service KvRpc {
  rpc get_timestamp(TsRequest) returns (TsReply) {}
  rpc set(SetRequest) returns (SetReply) {}
  rpc get(GetRequest) returns (GetReply) {}
  rpc remove(RemoveRequest) returns (RemoveReply) {}
  rpc prewrite(PrewriteRequest) returns (PrewriteReply) {}
  rpc commit(CommitRequest) returns (CommitReply) {}
}

message TsRequest { string name = 1; }

message TsReply {
  string name = 1;
  uint64 ts = 2;
}

message SetRequest {
  string key = 1;
  string value = 2;
  string name = 3;
  uint64 seq = 4;
}

message SetReply {
  string message = 1;
  string name = 2;
  uint64 seq = 3;
}

message GetRequest {
  string key = 1;
  string name = 2;
  uint64 seq = 3;
}

message GetReply {
  string message = 1;
  string name = 2;
  uint64 seq = 3;
}

message RemoveRequest {
  string key = 1;
  string name = 2;
  uint64 seq = 3;
}

message RemoveReply {
  string message = 1;
  string name = 2;
  uint64 seq = 3;
}

message Write {
  string key = 1;
  string value = 3;
}

message PrewriteRequest {
  string key = 1;
  string value = 2;
  string primary = 3;
  uint64 ts = 4;
  uint64 seq = 5;
}
message PrewriteReply {
  bool ok = 1;
  uint64 seq = 2;
}

message CommitRequest {
  bool is_primary = 1;
  string primary = 2;
  string key = 3;
  uint64 start_ts = 4;
  uint64 commit_ts = 5;
  uint64 seq = 6;
}

message CommitReply {
  bool ok = 1;
  uint64 seq = 2;
}

message Snapshot {
  repeated string keys = 1;
  repeated string values = 2;
  repeated string clients = 3;
  repeated uint64 seqs = 4;
}